--- a/DesigningCritMoves/assets/css/stylesIndex.css
+++ b/DesigningCritMoves/assets/css/stylesIndex.css
@@ -2,10 +2,11 @@ html, body {
     height: 100%;
 }
 body {
-    overflow:hidden;
+    overflow: hidden;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(#d9eeea, #023739);
+    /*Will-Changed Color to match Figma- No gradient*/
+    background-color: #D9EEEA;
     font-size: 20px;
     font-family: 'Albert Sans', sans-serif;
 }
