--- a/DesigningCritMoves/FacultyViewMaster.Master
+++ b/DesigningCritMoves/FacultyViewMaster.Master
@@ -6,10 +6,10 @@
 <head runat="server">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Crit Moves</title>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Albert+Sans&amp;display=swap">
     <link rel="stylesheet" href="assets/css/stylesIndex.css">
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -23,9 +23,8 @@
                 <img src="assets/img/MainLogo.png" class="img-fluid float-start" alt="Crit Moves">
             </div>
             <div class="d-flex position-absolute top-0 end-0">
-                <div class="flex-shrink-0 dropdown">           
-                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="ddlProfileControls" data-bs-toggle="dropdown" aria-expanded="false">
-                        Spring 2022
+                <div class="flex-shrink-0 dropdown">
+                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="ddlProfileControls" data-bs-toggle="dropdown" aria-expanded="false">Spring 2022
                         <img src="assets/img/Group.png" alt="Default Photo" width="45" height="45" class="rounded-circle">
                     </a>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
@@ -43,34 +42,51 @@
             </div>
         </header>
         <!--Begin Navbar-->
-        <nav class="navbar navbar-expand-lg" style="background-color:#D9EEEA">
-            <div class="container-fluid" style="background-color: #023739">
+        <nav class="navbar navbar-expand-lg" style="background-color: #D9EEEA">
+            <div class="container-fluid col-6" style="background-color: #023739">
                 <a class="navbar-brand" href="#" style="color: #FFFFFF">EDIT PROMPTS AND CATEGORIES</a>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDarkDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">View Prompts</a></li>
-                            <li><a class="dropdown-item" href="#">Edit Categories</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">View Prompts</a></li>
+                                <li><a class="dropdown-item" href="#">Edit Categories</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            </div>
-            <div class="container-fluid" style="background-color: #D9EEEA">
+            <div class="container-fluid col" style="background-color: #D9EEEA">
                 <a class="navbar-brand" href="#">PROMPTS</a>
             </div>
-            <div class="container-fluid" style="background-color: #FFFFFF">
+            <div class="container-fluid col" style="background-color: #FFFFFF">
                 <a class="navbar-brand" href="#">CATEGORIES</a>
             </div>
 
         </nav>
+        <!--Begin Setting up Vertical Columns-->
+            <div class="row align-items-start">
+                <div class="col-2"><!--Filter Category Appears here-->
+                    One of three columns
+                </div>
+                <div class="col-4"><!--Populated prompts will appear here-->
+                    One of three columns
+                </div>
+                <div class="col-6"><!---->
+                    One of three columns
+                </div>
+            </div>
+
         <div>
             <asp:ContentPlaceHolder ID="FacultyContentView" runat="server">
             </asp:ContentPlaceHolder>
         </div>
+        <footer id="masterFooter" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <a class="text-start float-start" href="#" style="padding-left: 1em; color: rgb(255,255,255);">Terms and Conditons</a>
+            <a class="text-center float-start" href="#" style="width: 80%; color: rgb(255,255,255);">Interested In Custom Prompts?</a>
+            <span class="fs-5 text-end float-end" style="padding-right: 2em; color: rgb(255,255,255);">@2022</span>
+        </footer>
     </form>
 </body>
 </html>
