--- a/DesigningCritMoves/assets/css/stylesIndex.css
+++ b/DesigningCritMoves/assets/css/stylesIndex.css
@@ -42,9 +42,8 @@ body {
 }
 footer {
     position: fixed;
-    /*background-color: rgba(2,55,57);*/
+    background-color: rgba(2,55,57);
     width: 100%;
     float: none;
     bottom: 0;
 }
-
