--- a/DesigningCritMoves/FacultyViewMaster.Master
+++ b/DesigningCritMoves/FacultyViewMaster.Master
@@ -49,7 +49,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
                                 <li><a class="dropdown-item" href="#">View Prompts</a></li>
                                 <li><a class="dropdown-item" href="#">Edit Categories</a></li>
                             </ul>
