--- a/DesigningCritMoves/AdminViewMaster.Master
+++ b/DesigningCritMoves/AdminViewMaster.Master
@@ -18,11 +18,11 @@
     <!--Header for Crit Moves-->
 
     <form id="form1" runat="server">
-        <header class="py-3 mb-3">
-            <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
-                <img src="assets/img/MainLogo.png" class="img-fluid float-start" alt="Crit Moves">
+        <header class="py-0 mb-0">
+            <div class="d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
+                <img src="assets/img/MainLogo.png" class="float-start" alt="Crit Moves" height="72">
             </div>
-            <div class="d-flex position-absolute top-0 end-0" style="padding-top:2em; padding-right:2em;">
+            <div class="d-flex position-absolute top-0 end-0" style="padding-top: 2em; padding-right: 2em;">
                 <div class="flex-shrink-0 dropdown">
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="ddlProfileControls" data-bs-toggle="dropdown" aria-expanded="false">Spring 2022
                         <img src="assets/img/Group.png" alt="Default Photo" width="45" height="45" class="rounded-circle">
@@ -39,7 +39,7 @@
                         <li><a class="dropdown-item" href="#">Log Out</a></li>
                     </ul>
                 </div>
-            </div>
+            </div>  
         </header>
         <!--Begin Navbar-->
         <nav class="navbar navbar-expand-lg" style="background-color: #D9EEEA">
@@ -67,7 +67,7 @@
         </nav>
         <!--Begin Setting up Vertical Columns-->
         <div class="row align-items-start">
-            <div class="col-3" style="padding-left:2em; padding-top:1em;">
+            <div class="col-3" style="padding-left: 2em; padding-top: 1em;">
                 <!--Fil <!--Begin Left Column-->
                 <asp:ContentPlaceHolder ID="AdminContentLeftCol" runat="server">
                     FacultyContent Default Left Text
@@ -82,7 +82,7 @@
 
             </div>
             <div class="col-5">
-                 <!--Begin Right Column-->
+                <!--Begin Right Column-->
                 <asp:ContentPlaceHolder ID="AdminContentRightCol" runat="server">
                     FacultyContent Default Right Text
                 </asp:ContentPlaceHolder>
@@ -91,11 +91,13 @@
 
         <div>
         </div>
-        <footer id="masterFooter" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <a class="text-start float-start" href="#" style="padding-left: 1em; color: rgb(255,255,255);">Terms and Conditons</a>
-            <a class="text-center float-start" href="#" style="width: 80%; color: rgb(255,255,255);">Interested In Custom Prompts?</a>
-            <span class="fs-5 text-end float-end" style="padding-right: 2em; color: rgb(255,255,255);">@2022</span>
-        </footer>
+        <div class="container">
+            <footer id="masterFooter" class="d-flex flex-wrap px-0 mx-0 py-1 my-1 align-items-center border-top">
+                <a class="text-start float-start" href="#" style="padding-left: 1em; color: rgb(255,255,255);">Terms and Conditons</a>
+                <a class="text-center float-start" href="#" style="width: 80%; color: rgb(255,255,255);">Interested In Custom Prompts?</a>
+                <span class="fs-5 text-end float-end" style="padding-right: 2em; color: rgb(255,255,255);">@2022</span>
+            </footer>
+        </div>
     </form>
 </body>
 </html>
