--- a/DesigningCritMoves/assets/css/stylesIndex.css
+++ b/DesigningCritMoves/assets/css/stylesIndex.css
@@ -40,12 +40,13 @@ body {
     margin-right: auto;
     margin-left: auto;
 }
-footer {
+#masterFooter {
     position: fixed;
     background-color: rgba(2,55,57);
     width: 100%;
-    float: none;
+    height:auto;
     bottom: 0;
+    z-index: 1;
 }
 
 .scroll{
