change refered style sheet for FacultyMaster

--- a/DesigningCritMoves/FacultyViewMaster.Master
+++ b/DesigningCritMoves/FacultyViewMaster.Master
@@ -9,7 +9,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Albert+Sans&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/stylesIndex.css">
+    <link rel="stylesheet" href="assets/css/stylesMaster.css">
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
