--- a/DesigningCritMoves/MobileStudent.Master
+++ b/DesigningCritMoves/MobileStudent.Master
@@ -13,11 +13,17 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
-        <div class="container square-box d-flex justify-content-center align-items-center">
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+    <header class="border-bottom border-white align-content-center">
+        <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
+            <img src="assets/img/Crit_Moves_FINAL_logos-02 1.png" class="img-fluid float-end" alt="Crit Moves">
         </div>
+        <div class="d-flex position-absolute top-0 end-0 pt-3 mr-5">
+            <img src="assets/img/Group.png" alt="Default Photo" width="45" height="45" class="rounded-circle">
+        </div>
+    </header>
+    <form id="form1" runat="server">
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+        </asp:ContentPlaceHolder>
     </form>
 </body>
 </html>
