--- a/DesigningCritMoves/assets/css/stylesIndex.css
+++ b/DesigningCritMoves/assets/css/stylesIndex.css
@@ -6,6 +6,7 @@ body {
     width: 100%;
     height: 100%;
     /*Will-Changed Color to match Figma- No gradient*/
+    background-image:linear-gradient(#D9EEEA, #023739);
     background-color: #D9EEEA;
     font-size: 20px;
     font-family: 'Albert Sans', sans-serif;
