--- a/DesigningCritMoves/FacultyViewMaster.Master
+++ b/DesigningCritMoves/FacultyViewMaster.Master
@@ -51,8 +51,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                             <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">View Prompts</a></li>
-                                <li><a class="dropdown-item" href="#">Edit Categories</a></li>
+                                <li><a class="dropdown-item" href="#">GAD 2021 - 001</a></li>
+                                <li><a class="dropdown-item" href="#">GAD 3001 - 002</a></li>
                             </ul>
                         </li>
                     </ul>
