Card Flip in Place

--- a/DesigningCritMoves/assets/css/stylesStudent.css
+++ b/DesigningCritMoves/assets/css/stylesStudent.css
@@ -1,18 +1,28 @@
-﻿body {
+﻿html {
+height:100%;}
+body{
+    min-height:100%;
     margin: 0;
     border: 0;
     overflow: hidden;
     /*Will-Changed Color to match Figma- No gradient*/
     background-color: #D9EEEA;
-    font-size: 16px;
+    font-size: 20px;
     font-family: 'Albert Sans', sans-serif;
 }
 .border-custom-color {
 }
 
-.square-box {
-    width: 100%;
-    min-height:300px;
+.card-custom-space{
+    min-height:20em;
+}
+
+.card-header-custom {
+    background-color: #023739;
+    color: #FFFFFF;
+    font-weight: 800;
+    border-radius: 21%;
+    margin-left:25%
 }
 
 .crit-moves-login-btn {
@@ -26,12 +36,11 @@
 }
 
 section {
-    padding: 3.0vh 1.5vh; 
     box-shadow: 0px 4px 4px rgba(2, 55, 57, 0.25);
 }
 
 .container-speech-bubble-container{
-    max-height:40%;
+    max-height:80%;
 }
 .speech-bubble {
     background: #FFFFFF;
@@ -41,12 +50,10 @@ section {
     .speech-bubble:after {
         position: absolute;
         content: '';
-        width: 10.5vh;
-        height: 5.3vh;
         background: #FFFFFF;
-        bottom: -1.0em;
+        bottom: 0em;
         z-index: 5;
-        transform: translateY(3.9em);
+        transform: translateY(0em);
         left: 60%;
         background-color: #D9EEEA;
         width: 0;
@@ -66,14 +73,7 @@ section {
         border-width: 75px 20px 0 20px;
         border-color: #FFFFFF transparent transparent transparent;
     }
-.container-prompt-title {
-    transform: translateY(-1em);
-    background-color: #023739;
-    width:25vh;
-    color:#FFFFFF;
-    font-weight:800;
-    border-radius: 21%;
-}
+
 .container-prompt-content {
     transform: translateY(-0.5em);
     word-wrap: break-word;
@@ -91,6 +91,9 @@ section {
     border-radius:6px;
     max-width:35%;
     transform:translateX(-1.3em)
+}
+.card-text-custom-padding{
+    padding:50px;
 }
 #btnCompletedPrompt:hover{
     cursor:pointer;
