--- a/DesigningCritMoves/assets/css/stylesMaster.css
+++ b/DesigningCritMoves/assets/css/stylesMaster.css
@@ -45,6 +45,7 @@ footer {
     font-size: 14px;
     line-height: 26px;
     cursor: default;
+    display: inline-block;
 }
 
     .help-tip:before {
@@ -64,12 +65,11 @@ footer {
         display: none;
         text-align: left;
         background-color: #1E2021;
-        padding: 20px;
-        width: 300px;
+        padding: 10px;
         position: absolute;
         border-radius: 3px;
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-        right: -4px;
+        right: 0px;
         color: #FFF;
         font-size: 13px;
         line-height: 1.4;
@@ -87,12 +87,11 @@ footer {
         }
 
         .help-tip p:after { /* Prevents the tooltip from being hidden */
-            width: 100%;
             height: 40px;
             content: '';
             position: absolute;
-            top: -40px;
-            left: 0;
+            top: -20px;
+            left: 10px;
         }
 
 /* CSS animation */
