--- a/DesigningCritMoves/assets/css/stylesMaster.css
+++ b/DesigningCritMoves/assets/css/stylesMaster.css
@@ -104,6 +104,52 @@ footer {
             top: -40px;
             left: 0;
         }
+.scrollbar {
+    margin-top : 5px;
+    float: left;
+    height: 100%;
+    width: 95%;
+    background: #023739;
+    overflow-y: scroll;
+    margin-bottom: 25px;
+   
+}
+
+.force-overflow {
+    min-height: 450px;
+}
+
+.scrollbar-primary::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #ccc;
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #999;
+    }
+.scrollbar-primary::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #4285F4;
+}
+
+.scrollbar-primary::-webkit-scrollbar-track{
+    border-radius: 10px;
+}
+
+.scrollbar-primary {
+    scrollbar-color: #4285F4 #F5F5F5;
+}
 
 /* CSS animation */
 
