--- a/DesigningCritMoves/FacultyViewMaster.Master
+++ b/DesigningCritMoves/FacultyViewMaster.Master
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Albert+Sans&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/stylesMaster.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js%22%3E"></script>
+    
 
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
 </head>
 <body>
     <!--Header for Crit Moves-->
@@ -42,30 +42,10 @@
                 </div>
             </div>  
         </header>
-        <!--Begin Navbar-->
-        <nav class="navbar navbar-expand-lg" style="background-color: #D9EEEA">
-            <div class="container-fluid col-6" style="background-color: #023739">
-                <a class="navbar-brand" href="#" style="color: #FFFFFF">GAD 2021 Computers for Design 001</a>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDarkDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-                            <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">GAD 2021 - 001</a></li>
-                                <li><a class="dropdown-item" href="#">GAD 3001 - 002</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="container-fluid col" style="background-color: #D9EEEA; box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.5) ">
-                <a class="navbar-brand" href="FacultyAddPrompt.aspx">PROMPTS</a>
-            </div>
-            <div class="container-fluid col" style="background-color: #FFFFFF">
-                <a class="navbar-brand" href="FacultyAddStudent.aspx">STUDENTS</a>
-            </div>
 
-        </nav>
+    <asp:ContentPlaceHolder ID="head" runat="server">
+        <%--navbar--%>
+    </asp:ContentPlaceHolder>
         <!--Begin Setting up Vertical Columns-->
         <div class="row align-items-start">
             <div class="col-3" style="padding-left: 2em; padding-top: 1em;">
@@ -98,5 +78,7 @@
                 <span class="fs-5 text-end float-end" style="padding-right: 2em; color: rgb(255,255,255);">@2022</span>
             </footer>
     </form>
+    <script src="assets/navbarFunction.js"></script>
 </body>
+
 </html>
