--- a/DesigningCritMoves/assets/css/stylesMaster.css
+++ b/DesigningCritMoves/assets/css/stylesMaster.css
@@ -5,6 +5,15 @@
 nav {
     background-color: #D9EEEA;
 }
+.container-active {
+    background-color: #D9EEEA;
+    box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.5);
+    text-align:left;
+}
+.container-inactive {
+    background-color: #FFFFFF;
+    text-align:left;
+}
 footer {
     position: fixed;
     background-color: rgba(2,55,57);
