--- a/DesigningCritMoves/AdminViewMaster.Master
+++ b/DesigningCritMoves/AdminViewMaster.Master
@@ -50,8 +50,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                             <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">View Prompts</a></li>
-                                <li><a class="dropdown-item" href="#">Edit Categories</a></li>
+                                <li><a class="dropdown-item" href="#">Prompts</a></li>
+                                <li><a class="dropdown-item" href="#">Categories</a></li>
                             </ul>
                         </li>
                     </ul>
