--- a/DesigningCritMoves/assets/css/stylesStudent.css
+++ b/DesigningCritMoves/assets/css/stylesStudent.css
@@ -98,3 +98,11 @@ section {
 #btnCompletedPrompt:hover{
     cursor:pointer;
 }
+footer {
+    position: fixed;
+    background-color: rgba(2,55,57);
+    width: 100%;
+    float: none;
+    bottom: 0;
+}
+
