--- a/DesigningCritMoves/MobileStudent.Master
+++ b/DesigningCritMoves/MobileStudent.Master
@@ -17,11 +17,11 @@
 </head>
 <body>
     <header class="border-bottom border-white align-content-center">
-        <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
-            <img src="assets/img/Crit_Moves_FINAL_logos-02 1.png" class="img-fluid float-end" alt="Crit Moves">
+        <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 0.5fr;">
+            <img src="assets/img/MainLogo.png" class="img-fluid float-end" alt="Crit Moves">
         </div>
         <div class="d-flex position-absolute top-0 end-0 pt-3 mr-5">
-            <img src="assets/img/Group.png" alt="Default Photo" width="45" height="45" class="rounded-circle">
+            <img src="assets/img/Group.png" alt="Default Photo" width="65" height="65" class="rounded-circle">
         </div>
     </header>
     <form id="form1" runat="server">
