--- a/DesigningCritMoves/assets/css/stylesStudent.css
+++ b/DesigningCritMoves/assets/css/stylesStudent.css
@@ -25,7 +25,8 @@ body{
     color: #FFFFFF;
     font-weight: 800;
     border-radius: 21%;     
-    margin-left:25%
+    margin-left:25%;
+    font-size:19px;
 }
 
 .crit-moves-login-btn {
@@ -51,6 +52,7 @@ section {
 }
 .container-speech-bubble-container,.container-speech-bubble-completed{
     height:100%;
+    border-style:none;
 }
 .container-speech-bubble-completed{
     background-color:transparent;
@@ -104,7 +106,7 @@ section {
     z-index:8;
     color:#FFFFFF;
     border-radius:6px;
-    max-width:35%;
+    max-width:130px;
     transform:translateX(-1.3em)
 }
 .container-prompt-mistake{
