--- a/DesigningCritMoves/MobileStudent.Master
+++ b/DesigningCritMoves/MobileStudent.Master
@@ -16,13 +16,17 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <header class="border-bottom border-white align-content-center">
+    <header class="border-bottom border-white align-content-center mb-5">
         <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 0.5fr;">
             <img src="assets/img/MainLogo.png" class="img-fluid float-end" alt="Crit Moves">
+
+            <div class="d-flex text-white" style="padding-left:8em;">
+                <div class="container letterCircle align-content-center text-white text-center" >
+                    <div class="container pt-1">S</div>
+                </div>
+            </div>
         </div>
-        <div class="d-flex position-absolute top-0 end-0 pt-3 mr-5">
-            <img src="assets/img/Group.png" alt="Default Photo" width="65" height="65" class="rounded-circle">
-        </div>
+
     </header>
     <form id="form1" runat="server">
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
