--- a/DesigningCritMoves/assets/css/stylesStudent.css
+++ b/DesigningCritMoves/assets/css/stylesStudent.css
@@ -1,4 +1,5 @@
-﻿html {
+﻿
+html {
 height:100%;}
 body{
     min-height:100%;
@@ -8,19 +9,39 @@ body{
     /*Will-Changed Color to match Figma- No gradient*/
     background-color: #D9EEEA;
     font-size: 20px;
-    font-family: 'Albert Sans', sans-serif;
+    font-family:'Plus Jakarta Sans'
 }
 .main-container-class{
     height:35vh;
 }
-.letterCircle {
+.letterCircle,.nestedLetterCircle {
     border-radius: 50%;
     width: 65px;
     height: 65px;
     padding: 8px;
     background: #023739;
     font: 32px Arial, sans-serif;
+
 }
+
+
+.nestedLetterCircle {
+    height: 18px;
+    width: 20px;
+    font:12px;
+    font-weight:800;
+    background: #D9EEEA;
+}
+
+.letterCircle:hover{
+    cursor:pointer;
+}
+.dropdown-menu-custom {
+    background-color: #023739;
+}
+
+
+
 .card-custom-space{
     border:none;
 }
