--- a/DesigningCritMoves/assets/css/stylesIndex.css
+++ b/DesigningCritMoves/assets/css/stylesIndex.css
@@ -6,11 +6,15 @@ body {
     width: 100%;
     height: 100%;
     /*Will-Changed Color to match Figma- No gradient*/
-    background-image:linear-gradient(#D9EEEA, #023739);
+    background-image: linear-gradient(#D9EEEA, #023739);
     background-color: #D9EEEA;
-    background-image:linear-gradient(#D9eeea, #023739);
+    background-image: linear-gradient(#D9eeea, #023739);
     font-size: 20px;
-    font-family: 'Albert Sans', sans-serif;
+    font-family: 'Plus Jakarta Sans';
+}
+h1{
+    font-size: 96px;
+    line-height:104px;
 }
 #mainLogo {
     margin: 10px;
