--- a/DesigningCritMoves/FacultyViewMaster.Master
+++ b/DesigningCritMoves/FacultyViewMaster.Master
@@ -35,6 +35,9 @@
                         <li>
                             <a class="dropdown-item" href="FacultyLandingPage.aspx">Faculty View</a></li>
                         <li>
+                            <li>
+                            <a class="dropdown-item" href="StudentSelectCourse.aspx">Student View</a></li>
+                        <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="index.html">Log Out</a></li>
