--- a/DesigningCritMoves/AdminViewMaster2.Master
+++ b/DesigningCritMoves/AdminViewMaster2.Master
@@ -9,6 +9,8 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Albert+Sans&amp;display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Plus Jakarta Sans" />
+
     <link rel="stylesheet" href="assets/css/stylesMaster.css">
 </head>
 <body>
