--- a/DesigningCritMoves/assets/css/stylesIndex.css
+++ b/DesigningCritMoves/assets/css/stylesIndex.css
@@ -1,6 +1,9 @@
 html, body {
     height: 100%;
 }
+* {
+    font-family: 'Plus Jakarta Sans';
+}
 body {
     overflow: hidden;
     width: 100%;
@@ -10,7 +13,6 @@ body {
     background-color: #D9EEEA;
     background-image: linear-gradient(#D9eeea, #023739);
     font-size: 20px;
-    font-family: 'Plus Jakarta Sans';
 }
 h1{
     font-size: 96px;
