--- a/DesigningCritMoves/assets/css/stylesMaster.css
+++ b/DesigningCritMoves/assets/css/stylesMaster.css
@@ -5,6 +5,11 @@
     overflow: hidden;
     font-family: 'Plus Jakarta Sans';
 }
+button{
+    font-weight:800;
+    font-size:24px;
+    line-height:32px;
+}
 nav {   
     background-color: #D9EEEA;
 }
