--- a/DesigningCritMoves/assets/css/stylesMaster.css
+++ b/DesigningCritMoves/assets/css/stylesMaster.css
@@ -222,3 +222,11 @@ footer {
     }
 }
 
+.card-scooch-it {
+    width: 50%;
+    text-transform:capitalize;
+    height: 3%;
+    margin: 0 auto;
+    border-radius: 0px 0px 15px 15px;
+    background-color: #023739;
+}
