--- a/DesigningCritMoves/MobileStudent.Master
+++ b/DesigningCritMoves/MobileStudent.Master
@@ -33,10 +33,10 @@
                                         </div>
                                         <div class="col-11">
                                             <div class="row">
-                                                <div class="col">Sophia Mazza</div>
+                                                <div class="col text-white">Sophia Mazza</div>
                                             </div>
                                             <div class="row">
-                                                <div class="col">tuk11615@temple.edu</div>
+                                                <div class="col text-white">tuk11615@temple.edu</div>
                                             </div>
                                         </div>
                                     </div>
