--- a/DesigningCritMoves/MobileStudent.Master
+++ b/DesigningCritMoves/MobileStudent.Master
@@ -10,7 +10,6 @@
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Plus Jakarta Sans" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-
     <link rel="stylesheet" href="assets/css/stylesStudent.css">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -24,29 +23,31 @@
                 <div id="dropdownAccount" class="container letterCircle align-content-center text-white text-center dropdown-content" style="background-color: #023739" data-bs-toggle="dropdown" aria-expanded="false">
                     <div class="container pt-1">S</div>
                     <ul class="dropdown-menu dropdown-menu-custom" aria-labelledby="dropdownAccount">
-                        <li><a class="dropdown-item " href="#" />
+                        <li>
+                            <div class="container" href="#" />
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-1">
-                                        <div class="container nestedLetterCircle text-center" style="color: #023739">
-                                            <div class="container pt-1">S</div>
+                                    <div class="col pt-2">
+                                        <div class="container nestedLetterCircle justify-content-center align-content-center" style="color: #023739">
+                                            <div class="container pt-1 little-S-class w-25" style="font-size: 12px;">S</div>
                                         </div>
-                                        <div class="col-11">
-                                            <div class="row">
-                                                <div class="col text-white">Sophia Mazza</div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col text-white">tuk11615@temple.edu</div>
-                                            </div>
+                                    </div>
+                                    <div class="col">
+
+                                        <div class="col text-white">Sophia Mazza</div>
+                                        <div class="row">
+                                            <div class="col text-white">tuk11615@temple.edu</div>
+
                                         </div>
+                                        <hr class="dropdown-divider border-white" />
+
+                                        <a id="btnStudentLogout" class="dropdown-item text-uppercase text-white" href="#">Sign out</a></>
+
                                     </div>
                                 </div>
                             </div>
                         </li>
-                        <li>
-                            <hr class="dropdown-divider border-white" />
-                        </li>
-                        <li><a class="dropdown-item text-uppercase text-white" href="#">Sign out</a></li>
+                        <li></li>
 
                     </ul>
                 </div>
@@ -61,5 +62,6 @@
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+
 </body>
 </html>
